; ModuleID = '/home/carl/AnghaBench/linux/drivers/block/extr_floppy.c_floppy_release_allocated_regions.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/block/extr_floppy.c_floppy_release_allocated_regions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.io_region = type { i32, i64 }
%struct.TYPE_2__ = type { i64 }

@io_regions = common dso_local global %struct.io_region* null, align 8
@FDCS = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.io_region*)* @floppy_release_allocated_regions to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @floppy_release_allocated_regions(i32 %0, %struct.io_region* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.io_region*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.io_region* %1, %struct.io_region** %4, align 8
  br label %5

5:                                                ; preds = %9, %2
  %6 = load %struct.io_region*, %struct.io_region** %4, align 8
  %7 = load %struct.io_region*, %struct.io_region** @io_regions, align 8
  %8 = icmp ne %struct.io_region* %6, %7
  br i1 %8, label %9, label %23

9:                                                ; preds = %5
  %10 = load %struct.io_region*, %struct.io_region** %4, align 8
  %11 = getelementptr inbounds %struct.io_region, %struct.io_region* %10, i32 -1
  store %struct.io_region* %11, %struct.io_region** %4, align 8
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @FDCS, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load %struct.io_region*, %struct.io_region** %4, align 8
  %16 = getelementptr inbounds %struct.io_region, %struct.io_region* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = add nsw i64 %14, %17
  %19 = load %struct.io_region*, %struct.io_region** %4, align 8
  %20 = getelementptr inbounds %struct.io_region, %struct.io_region* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = call i32 @release_region(i64 %18, i32 %21)
  br label %5

23:                                               ; preds = %5
  ret void
}

declare dso_local i32 @release_region(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
